# wordCloud

./: CMakeLists.txt  README.md  compile_commands.json  dictionaryinput.txt  reducedhamlet.txt  replit.nix
bloom/: CMakeLists.txt  bloomfilter.cpp  bloomfilter.h  bloomfilter.sh
src/: main.cpp
utils/: averageVector.hpp  djb2.hpp  md5.hpp  sha256.hpp  split.h  utils.hpp  wordListGenerator.hpp
utils/openssl/lib64/: libssl.so.3
utils/openssl/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
utils/openssl/share/doc/openssl/html/man1/: openssl-cmp.html  openssl-dsa.html  openssl-dsaparam.html  openssl-ec.html  openssl-enc.html  openssl-fipsinstall.html  openssl-genpkey.html  openssl-pkey.html  openssl-pkeyutl.html  openssl-rsa.html  openssl-rsautl.html  openssl-s_client.html  openssl-speed.html  openssl-x509.html
utils/openssl/share/doc/openssl/html/man3/: CMS_add0_cert.html  CMS_sign.html  CMS_verify.html  EVP_DigestSignInit.html  EVP_DigestVerifyInit.html  EVP_EncryptInit.html  EVP_PKEY_set1_RSA.html  EVP_RAND.html  EVP_SignInit.html  EVP_VerifyInit.html  EVP_aes_128_gcm.html  EVP_aria_128_gcm.html  EVP_bf_cbc.html  EVP_blake2b512.html  EVP_camellia_128_ecb.html  EVP_cast5_cbc.html  EVP_chacha20.html  EVP_des_cbc.html  EVP_desx_cbc.html  EVP_idea_cbc.html  EVP_md2.html  EVP_md4.html  EVP_md5.html  EVP_mdc2.html  EVP_rc2_cbc.html  EVP_rc4.html  EVP_rc5_32_12_16_cbc.html  EVP_ripemd160.html  EVP_seed_cbc.html  EVP_sha1.html  EVP_sha224.html  EVP_sha3_224.html  EVP_sm3.html  EVP_sm4_cbc.html  EVP_whirlpool.html  OSSL_CMP_CTX_new.html  OSSL_CMP_MSG_get0_header.html  OSSL_DECODER_from_bio.html  OSSL_sleep.html  SSL_CTX_dane_enable.html  (+5 more)
utils/openssl/share/doc/openssl/html/man5/: config.html
utils/openssl/share/doc/openssl/html/man7/: EVP_CIPHER-AES.html  EVP_KDF-ARGON2.html  EVP_PKEY-EC.html  EVP_RAND-HASH-DRBG.html  EVP_RAND-HMAC-DRBG.html  OSSL_PROVIDER-FIPS.html  OSSL_PROVIDER-default.html  crypto.html  fips_module.html  migration_guide.html  provider-base.html  provider-cipher.html  provider-decoder.html  provider-digest.html  provider-keymgmt.html
utils/openssl/share/man/man1/: CA.pl.1ossl  openssl-asn1parse.1ossl  openssl-ca.1ossl  openssl-ciphers.1ossl  openssl-cmds.1ossl  openssl-cmp.1ossl  openssl-cms.1ossl  openssl-crl.1ossl  openssl-crl2pkcs7.1ossl  openssl-dgst.1ossl  openssl-dhparam.1ossl  openssl-dsa.1ossl  openssl-dsaparam.1ossl  openssl-ec.1ossl  openssl-ecparam.1ossl  openssl-enc.1ossl  openssl-engine.1ossl  openssl-errstr.1ossl  openssl-fipsinstall.1ossl  openssl-format-options.1ossl  openssl-gendsa.1ossl  openssl-genpkey.1ossl  openssl-genrsa.1ossl  openssl-info.1ossl  openssl-kdf.1ossl  openssl-list.1ossl  openssl-mac.1ossl  openssl-namedisplay-options.1ossl  openssl-nseq.1ossl  openssl-ocsp.1ossl  openssl-passphrase-options.1ossl  openssl-passwd.1ossl  openssl-pkcs12.1ossl  openssl-pkcs7.1ossl  openssl-pkcs8.1ossl  openssl-pkey.1ossl  openssl-pkeyparam.1ossl  openssl-pkeyutl.1ossl  openssl-prime.1ossl  openssl-rand.1ossl  (+20 more)
utils/openssl/share/man/man3/: ADMISSIONS.3ossl  ASN1_EXTERN_FUNCS.3ossl  ASN1_INTEGER_get_int64.3ossl  ASN1_INTEGER_new.3ossl  ASN1_ITEM_lookup.3ossl  ASN1_OBJECT_new.3ossl  ASN1_STRING_TABLE_add.3ossl  ASN1_STRING_length.3ossl  ASN1_STRING_new.3ossl  ASN1_STRING_print_ex.3ossl  ASN1_TIME_set.3ossl  ASN1_TYPE_get.3ossl  ASN1_aux_cb.3ossl  ASN1_generate_nconf.3ossl  ASN1_item_d2i_bio.3ossl  ASN1_item_new.3ossl  ASN1_item_sign.3ossl  ASYNC_WAIT_CTX_new.3ossl  ASYNC_start_job.3ossl  BF_encrypt.3ossl  BIO_ADDR.3ossl  BIO_ADDRINFO.3ossl  BIO_connect.3ossl  BIO_ctrl.3ossl  BIO_f_base64.3ossl  BIO_f_buffer.3ossl  BIO_f_cipher.3ossl  BIO_f_md.3ossl  BIO_f_null.3ossl  BIO_f_prefix.3ossl  BIO_f_readbuffer.3ossl  BIO_f_ssl.3ossl  BIO_find_type.3ossl  BIO_get_data.3ossl  BIO_get_ex_new_index.3ossl  BIO_get_rpoll_descriptor.3ossl  BIO_meth_new.3ossl  BIO_new.3ossl  BIO_new_CMS.3ossl  BIO_parse_hostserv.3ossl  (+586 more)
utils/openssl/share/man/man5/: config.5ossl  fips_config.5ossl  x509v3_config.5ossl
utils/openssl/share/man/man7/: EVP_ASYM_CIPHER-RSA.7ossl  EVP_ASYM_CIPHER-SM2.7ossl  EVP_CIPHER-AES.7ossl  EVP_CIPHER-ARIA.7ossl  EVP_CIPHER-BLOWFISH.7ossl  EVP_CIPHER-CAMELLIA.7ossl  EVP_CIPHER-CAST.7ossl  EVP_CIPHER-CHACHA.7ossl  EVP_CIPHER-DES.7ossl  EVP_CIPHER-IDEA.7ossl  EVP_CIPHER-NULL.7ossl  EVP_CIPHER-RC2.7ossl  EVP_CIPHER-RC4.7ossl  EVP_CIPHER-RC5.7ossl  EVP_CIPHER-SEED.7ossl  EVP_CIPHER-SM4.7ossl  EVP_KDF-ARGON2.7ossl  EVP_KDF-HKDF.7ossl  EVP_KDF-HMAC-DRBG.7ossl  EVP_KDF-KB.7ossl  EVP_KDF-KRB5KDF.7ossl  EVP_KDF-PBKDF1.7ossl  EVP_KDF-PBKDF2.7ossl  EVP_KDF-PKCS12KDF.7ossl  EVP_KDF-PVKKDF.7ossl  EVP_KDF-SCRYPT.7ossl  EVP_KDF-SS.7ossl  EVP_KDF-SSHKDF.7ossl  EVP_KDF-TLS13_KDF.7ossl  EVP_KDF-TLS1_PRF.7ossl  EVP_KDF-X942-ASN1.7ossl  EVP_KDF-X942-CONCAT.7ossl  EVP_KDF-X963.7ossl  EVP_KEM-EC.7ossl  EVP_KEM-RSA.7ossl  EVP_KEM-X25519.7ossl  EVP_KEYEXCH-DH.7ossl  EVP_KEYEXCH-ECDH.7ossl  EVP_KEYEXCH-X25519.7ossl  EVP_MAC-BLAKE2.7ossl  (+92 more)
wordcloud/: CMakeLists.txt  optimized_wordcloud.cpp  wordcloud.cpp  wordcloud.h
